<resources>
    <string name="input_scout_hint">Input YOUR Name</string>
    <string name="select_scout_team_hint">Select YOUR Team:</string>
    <string name="proceed_prematch">Proceed to Scouting</string>
    <string name="app_name">1718 Scout</string>
    <string name="start_hint_text_1">##</string>
    <string name="prematch_match">MATCH: </string>
    <string name="start_match_select_textview">Input Match Number:</string>
    <string name="select_autonomous">Go to Autonomous</string>
    <string name="select_teleop">Go to Teleop</string>
    <string name="select_comments">Comment &amp; Finalize</string>
    <string name="select_team">Team:</string>
    <string-array name="select_alliance">
        <item>Select Alliance</item>
        <item>Red</item>
        <item>Blue</item>
    </string-array>
    <string name="autonomous_balanced">Robot is Balanced</string>
    <string name="autonomous_jewel_header">JEWELS MOVED</string>
    <string name="autonomous_own_jewel">OWN</string>
    <string name="autonomous_other_jewel">OTHER</string>
    <string name="autonomous_red_jewel">RED</string>
    <string name="autonomous_blue_jewel">BLUE</string>
    <string name="cryptobox_header">CRYPTOBOX</string>
    <string name="glyphs">GLYPHS</string>
    <string name="rows">ROWS</string>
    <string name="columns">COLUMNS</string>
    <string name="relics">RELICS</string>
    <string name="ciphers">CIPHER</string>
    <string name="autonomous_key_bonus">KEY BONUSES</string>
    <string name="autonomous_safe_zone">PARKED IN SAFE ZONE</string>
    <string name="teleop_glyph_count">Glyphs Scored in Cryptobox during TeleOp</string>
    <string name="teleop_row_count">Cryptobox Rows Completed</string>
    <string name="teleop_column_count">Cryptobox Columns Completed</string>
    <string name="teleop_cipher_1">Cipher 1 Completed</string>
    <string name="teleop_cipher_2">Cipher 2 Completed</string>
    <string name="relic">Relics Scored by Robot</string>
    <string-array name="relic_zones">
        <item>Not Scored</item>
        <item>Zone 1</item>
        <item>Zone 2</item>
        <item>Zone 3</item>
    </string-array>
    <string name="attempted">ATTEMPTED</string>
    <string name="not_scored">UNSCORED</string>
    <string name="zone1">ZONE 1</string>
    <string name="zone2">ZONE 2</string>
    <string name="zone3">ZONE 3</string>
    <string name="standing">STANDING</string>
    <string name="teleop_balanced">ROBOT BALANCED</string>
    <string name="standing_relic">Relic is Standing</string>
    <string name="finish_balanced">Robot is Balanced at end of Match</string>
    <string name="finish">Save &amp; Reset</string>
    <string name="reset">RESET DATA</string>
    <string name="autonomous">AUTONOMOUS</string>
    <string name="teleop">TELEOP</string>
    <string name="comments">COMMENTS</string>
    <string name="switch_autonomous">SWITCH TO AUTONOMOUS</string>
    <string name="switch_teleop">SWITCH TO TELEOP</string>
    <string name="switch_comments">SWITCH TO COMMENTS</string>
    <string-array name="select_your_team">
        <item>Select Your Team</item>
        <item>5291 - TOWR</item>
        <item>11230 - ElektraKatz</item>
        <item>11231 - Cyborg Cats</item>
    </string-array>
    <string-array name="team_names"> // STATES
        <item>Select Team...</item>
        <item>Steel Eagles</item>
        <item>TOWR The Oxford Wildcats Robotics</item>
        <item>Red Storm Robotics-White</item>
        <item>Enigma Riddlers</item>
        <item>Enigma Puzzlers</item>
        <item>Sonic Eagles</item>
        <item>Bionic Broncos</item>
        <item>Synergy</item>
        <item>HexaSonics</item>
        <item>Golden Gears</item>
        <item>F.L.A.G. Fight Like A Girl</item>
        <item>Mechanical Mayhem</item>
        <item>Struke Force - Special Air Service</item>
        <item>Vicious Volts</item>
        <item>Raging Robots</item>
        <item>Bionic Sailors</item>
        <item>Vicious Vassar Vulcans</item>
        <item>Stryke Force - Screaming Eagles</item>
        <item>Classical Engineers</item>
        <item>G3: Geeks, Gears &amp; Gadgets Blue</item>
        <item>Team KAOS</item>
        <item>Twisted Metal</item>
        <item>Robo Dawgs</item>
        <item>Cardinal Overload</item>
        <item>Mattawan FTC RoboKats - CyberKlaws</item>
        <item>Red Storm Robotics-Blue</item>
        <item>Robo Rangers</item>
        <item>Robogators</item>
        <item>Team KILT</item>
        <item>SnowBots Blue</item>
        <item>OMS ELektraKatz</item>
        <item>Thunderbots</item>
        <item>Omegabots</item>
        <item>Chelsea Glitch</item>
        <item>Circuit Breakers</item>
        <item>Wayland Wildcat Cat-a-Tech-Nics</item>
        <item>West Bloomfield Short Circuit</item>
        <item>East Grand Rapids Middle School</item>
        <item>Masterminds</item>
        <item>FHPS METEORS</item>
        <item>Waldon Dragons</item>
        <item>HF_FTC__#2</item>
        <item>Steel Falcons</item>
        <item>Green Mustaches</item>
        <item>LavaBots</item>
        <item>Joe Bots - White</item>
        <item>Other</item>
    </string-array>
    <string-array name="team_name_number">
        <item>Select Team...</item>
        <item>5290 Steel Eagles</item>
        <item>5291 TOWR The Oxford Wildcats Robotics</item>
        <item>5292 Red Storm Robotics-White</item>
        <item>5385 Enigma Riddlers</item>
        <item>5391 Enigma Puzzlers</item>
        <item>5957 Sonic Eagles</item>
        <item>6079 Bionic Broncos</item>
        <item>6225 Synergy</item>
        <item>7023 HexaSonics</item>
        <item>7043 Golden Gears</item>
        <item>7048 Purple Protons</item>
        <item>7049 Omega Warriors</item>
        <item>7085 F.L.A.G. Fight Like a Girl</item>
        <item>7138 Mechanical Mayhem</item>
        <item>7228 Stryke Force - Special Air Service</item>
        <item>7252 Vicious Volts</item>
        <item>7253 Raging Robots</item>
        <item>8133 Bionic Sailors</item>
        <item>8239 Vicious Vassar Vulcans</item>
        <item>8553 Stryke Force - Screaming Eagles</item>
        <item>8579 Classical Engineers</item>
        <item>8621 G3: Geeks, Gears &amp; Gadgets Blue</item>
        <item>8646 Team KAOS</item>
        <item>8935 Twisted Metal</item>
        <item>9133 Robo Dawgs</item>
        <item>9514 Cardinal Overload</item>
        <item>9855 Mattawan FTC RoboKats - CyberKlaws</item>
        <item>10031 Red Storm RObotics-Blue</item>
        <item>10035 Robo Rangers</item>
        <item>10062 Robogators</item>
        <item>10538 Team KILT</item>
        <item>10723 SnowBots Blue</item>
        <item>11230 OMS ELektraKatz</item>
        <item>11244 Thunderbots</item>
        <item>11367 Omegabots</item>
        <item>11617 Chelsea Glitch</item>
        <item>11717 Circuit Breakers</item>
        <item>11846 Wayland Wildcat Cat-a-Tech-Nics</item>
        <item>11870 West Bloomfield Short Circuit</item>
        <item>11987 East Grand Rapids Middle School</item>
        <item>12811 Masterminds</item>
        <item>12845 FHPS METEORS</item>
        <item>12862 Waldon Dragons</item>
        <item>12895 HF_FTC__#2</item>
        <item>13157 Steel Falcons</item>
        <item>13222 Green Mustaches</item>
        <item>13250 LavaBots</item>
        <item>13702 Joe Bots - White</item>
        <item>Other</item>
    </string-array>
</resources>