<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="club.towr5291.towr5291relicrecoveryscouting.PreMatchActivity">

    <EditText
        android:id="@+id/prematch_input_scout_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:hint="@string/input_scout_hint"
        android:inputType="textPersonName"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        tools:layout_editor_absoluteY="92dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/prematch_scout_data_static" />

    <TextView
        android:id="@+id/prematch_select_scout_team_static_orig"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/select_scout_team_hint"
        app:layout_constraintBaseline_toBaselineOf="@+id/prematch_select_scout_team"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <Spinner
        android:id="@+id/prematch_select_scout_team"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/select_your_team"
        android:layout_marginRight="6dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/prematch_input_scout_name" />

    <EditText
        android:id="@+id/prematch_input_match"
        android:layout_width="29dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/start_hint_text_1"
        android:inputType="number"
        android:maxLength="2"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/prematch_select_team" />

    <Button
        android:id="@+id/prematch_goto_autonomous"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:onClick="gotoAutonomous"
        android:text="@string/select_autonomous"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/prematch_input_match"/>

    <TextView
        android:id="@+id/prematch_input_match_static"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/start_match_select_textview"
        app:layout_constraintBaseline_toBaselineOf="@+id/prematch_input_match"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/prematch_input_match"
        tools:text="@string/start_match_select_textview"/>

    <Spinner
        android:id="@+id/prematch_select_team"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="6dp"
        android:entries="@array/select_team_name_number"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/prematch_team_data_static" />

    <TextView
        android:id="@+id/prematch_select_team_static"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:text="@string/select_team"
        app:layout_constraintBaseline_toBaselineOf="@+id/prematch_select_team"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:text="@string/select_team"/>

    <TextView
        android:id="@+id/prematch_scout_data_static"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="SCOUT DATA:"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/prematch_team_data_static"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="87dp"
        android:text="TEAM DATA"
        android:textAllCaps="false"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/prematch_select_scout_team" />

</android.support.constraint.ConstraintLayout>


